# calamares-bigscreen-branding

./: CMakeLists.txt  README.md
bigscreen/: CustomNavigationBar.qml  NavigationHelper.qml  Offline.qml  ProgressionBarVertical.qml  Requirements.qml  branding.desc  calamares-navigation.qml  calamares-sidebar.qml  keyboardq.qml  localeq.qml  welcomeq.qml
lib/: CMakeLists.txt  emulatedmouse.cpp  emulatedmouse.h  fakeEvent.cpp  fakeEvent.h  fakeqeventplugin.cpp  fakeqeventplugin.h  plugins.qmltypes  qmldir
sample-settings/: settings.conf
